--- a/_posts/2016-02-05-test_post.markdown
+++ b/_posts/2016-02-05-test_post.markdown
@@ -19,7 +19,7 @@ TEST
 
 #### Test
 
-<div class="img img--fullContainer img--14xLeading" style="background-image: url({{ site.baseurl_posts_img }}pixellou.jpg);"></div>
+<div class="img img--fullContainer img--14xLeading" style="background-image: url({{ site.baseurl_posts_img }}/pixellou.jpg);"></div>
 
 <blockquote class="u--startsWithDoubleQuote">“TEST” <br/>- TEST</blockquote>
 
